hphp/test/vm/fatality.php.exp
HipHop Fatal error: Function already defined: g in hphp/test/vm/fatality.php on line 14
