hphp/test/vm/fatality.php.filter
#!/bin/bash
sed -e 's, in [^ ]*hphp/, in hphp/,'
